# exa-search-cli

./: .gitignore  AGENTS.md  LICENSE  README.es.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.zh-CN.md  llms.txt  pyproject.toml
docs/: USAGE.md  USAGE.ru.md  USAGE.zh-CN.md
src/exa_cli/: main.py
