[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exa-search-cli"
version = "0.1.2"
description = "AI-agent friendly CLI for Exa — neural web search, URL crawling, and deep research from the terminal."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Nolan Vale" },
]
maintainers = [
    { name = "Nolan Vale Tools" },
]
keywords = ["exa", "exa-search", "search", "search-automation", "cli", "ai-agents", "llm-tools", "developer-tools", "web-search", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Utilities",
]
dependencies = ["exa-py>=1.0.0"]

[dependency-groups]
dev = ["ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/nolan-vale/exa-search-cli"
Repository = "https://github.com/nolan-vale/exa-search-cli"
Issues = "https://github.com/nolan-vale/exa-search-cli/issues"

[project.scripts]
exa-search   = "exa_cli.main:search"
exa-crawl    = "exa_cli.main:crawl"
exa-research = "exa_cli.main:research"

[tool.hatch.build.targets.wheel]
packages = ["src/exa_cli"]
