[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exa-search-cli"
version = "0.1.3"
description = "AI-agent friendly CLI for Exa — neural web search, URL crawling, and deep research from the terminal."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Nolan Vale" },
]
maintainers = [
    { name = "Nolan Vale Tools" },
]
keywords = [
  "exa",
  "exa-search",
  "semantic-search",
  "neural-search",
  "web-search",
  "ai-search",
  "cli",
  "python-cli",
  "ai-agents",
  "llm-tools",
  "json-output",
  "terminal-tools",
  "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Utilities",
]
dependencies = ["exa-py>=1.0.0"]

[dependency-groups]
dev = ["ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/nolan-vale/exa-search-cli"
Repository = "https://github.com/nolan-vale/exa-search-cli"
Documentation = "https://github.com/nolan-vale/exa-search-cli/blob/main/docs/USAGE.md"
Issues = "https://github.com/nolan-vale/exa-search-cli/issues"
Changelog = "https://github.com/nolan-vale/exa-search-cli/releases"

[project.scripts]
exa-search   = "exa_cli.main:search"
exa-crawl    = "exa_cli.main:crawl"
exa-research = "exa_cli.main:research"

[tool.hatch.build.targets.wheel]
packages = ["src/exa_cli"]
